# gitvoyant

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCOVERY.md  Makefile  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPLEXITY_REQUIREMENTS.md  TEMPORAL_ANALYSIS_EXPLAINED.md  index.html
examples/: __init__.py  flask_discovery_demo.py
src/: __init__.py
src/core/: __init__.py  temporal_evaluator.py
src/gitvoyant/: __init__.py
src/gitvoyant/application/: agent_runtime.py
src/gitvoyant/application/dto/: evaluation_response.py
src/gitvoyant/application/use_cases/: analyze_file_use_case.py  analyze_repo_use_case.py
src/gitvoyant/cli/: __init__.py  analyze.py  banner.py  cli.py  cli_output_service.py  repo_resolver.py  utils.py
src/gitvoyant/domain/entities/: repository.py  temporal_evaluation.py
src/gitvoyant/domain/services/: temporal_evaluator_service.py
src/gitvoyant/domain/value_objects/: complexity_tenor.py  confidence_rank.py  time_table.py
src/gitvoyant/infrastructure/: config.py  temporal_evaluator.py
src/gitvoyant/infrastructure/analyzers/: __init__.py  base.py  go.py  java.py  javascript.py  python.py
src/gitvoyant/presentation/agents/: langchain_bindings.py
tests/application/: test_use_cases.py
tests/cli/: test_agent_entry.py
tests/integration/: test_agent_flow.py
tests/unit/: test_cli_output_service.py  test_cli_repo_resolver.py  test_go_analyzer.py  test_java_analyzer.py  test_javascript_analyzer.py  test_temporal_evaluator.py  test_temporal_evaluator_service.py  test_value_objects_confidence_and_tenor.py
tests/unit/testdata/test_repo/: simple_module.py
tests/unit/testdata/test_repo/nested/: utils.py
