[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitvoyant"
version = "0.1.0"
description = "Temporal Code Intelligence - See Your Code's Future"
authors = [{name = "Jesse Moses", email = "jesse@bytestacklabs.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/Cre4T3Tiv3/gitvoyant"
Repository = "https://github.com/Cre4T3Tiv3/gitvoyant"
Documentation = "https://github.com/Cre4T3Tiv3/gitvoyant/tree/main/docs"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

# This is the key fix - tell Hatchling where to find the package
[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
gitvoyant = "src.core.temporal_evaluator:main"